--- a/components/product_list/product_list.scss
+++ b/components/product_list/product_list.scss
@@ -32,7 +32,7 @@
           color: #fff;
           font-size: 24rpx;
           padding: 0 10rpx;
-          background-color: $color_primary;
+          background-color: $color_primary_red;
           border-bottom-right-radius: 10rpx;
         }
       }
@@ -53,7 +53,7 @@
       .price {
         display: inline-block;
         font-size: 30rpx;
-        color: $color_primary;
+        color: $color_primary_red;
         margin-top: 20rpx;
         position: relative;
         white-space: nowrap;
