--- a/pages/collect/collect.wxml
+++ b/pages/collect/collect.wxml
@@ -2,8 +2,16 @@
 <import src="../../components/product_list_single/product_list_single.wxml"/>
 
 <import src="../../components/tab_bar/tab_bar.wxml"/>
-<view class="page index">
-    <scroll-view class="overflow-scroll" scroll-y="true" lower-threshold="100" bindscrolltolower="requestList" scroll-with-animation="true">
+<view class="page index collect ">
+    <view class="header_box bg-fff">
+        <view class="shopnavli">
+            <view class="item"><text class="text on">所有商品</text></view>
+            <view class="item"><text class="text">所有帖子</text></view>
+        </view>
+    </view>
+    <view class="blank20"></view>
+    <scroll-view class="overflow-scroll" scroll-y="true" style="top:130rpx;" lower-threshold="100" bindscrolltolower="requestList"
+                 scroll-with-animation="true">
 
         <!--列表-->
         <template is="productListSingle" data="{{list,...$productListSingle}}"></template>
