修改产品详细页

--- a/components/banner-swiper/banner-swiper.wxml
+++ b/components/banner-swiper/banner-swiper.wxml
@@ -6,7 +6,7 @@
             bindchange="{{bindchange}}"
             circular="{{circular}}">
 
-        <block wx:for="{{banners}}">
+        <block wx:for="{{imgUrls}}">
             <swiper-item>
                 <image src="{{item}}" class="slide-image" mode="widthFix"
                        bindload="{{imageLoad}}"
