--- a/app.scss
+++ b/app.scss
@@ -14,6 +14,8 @@
 @import "components/product_list/product_list";
 @import "components/product_list_single/product_list_single";
 @import "components/bbs_list/bbs_list";
+@import "style/components";
+
 
 
 
