--- a/style/args.scss
+++ b/style/args.scss
@@ -13,6 +13,15 @@ $borderRadius: 5px;
 $static_path: '';
 $borderColor: #e6e6e6;
 
+$lightMainColor: #ff706a;
+$color_primary: '';
+
+$colorE6: #e6e6e6;
+$colorBD: #bdbdbd;
+$colorE0: #e0e0e0;
+$colorDF: #dfdfdf;
+
+$colorF5: #f5f5f5;
 
 $static_path: 'http://p0mdjahro.bkt.clouddn.com';
 
