--- a/style/common.scss
+++ b/style/common.scss
@@ -362,3 +362,21 @@ a {
     border-bottom: 0;
   }
 }
+
+
+@keyframes showAnimation {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+@keyframes hideAnimation {
+  0% {
+    transform: scaleY(1);
+  }
+  100% {
+    transform: scaleY(0);
+  }
+}
