--- a/components/listcomponents/list/list.wxml
+++ b/components/listcomponents/list/list.wxml
@@ -23,7 +23,7 @@
     <view wx:if="{{listType=='bbs'}}">
         <view class="blank20"></view>
         <view class="bbs_list">
-            <view class="item" wx:for="{{listData}}" wx:key="id">
+            <view class="item" wx:for="{{listData}}" wx:key="id" bindtap="goDetail" data-id="{{item.id}}">
                 <view class="pic" wx:if="{{item.image}}">
                     <image src="{{item.image}}" mode="scaleToFill"></image>
                 </view>
@@ -41,36 +41,6 @@
                     </view>
                 </view>
             </view>
-
-            <!--<view class="item pictype">-->
-            <!--<view class="title-box">魔都醉美金秋，你缺的是一场慵懒下午茶，这篇优惠 集锦为你奉上！魔都醉美金秋，你缺的是一场慵懒下午茶，这篇优惠 集锦为你奉上！魔都醉美金秋，你缺的是一场慵懒下午茶，这篇优惠 集锦为你奉上！</view>-->
-            <!--<view class="pic-box clearfix">-->
-            <!--<view class="img">-->
-            <!--<image src="http://oofuaem2b.bkt.clouddn.com/2018/0119/15163419242936587847.png?imageView2/1/w/700/h/360/interlace/1/q/100"></image>-->
-            <!--</view>-->
-            <!--<view class="img">-->
-            <!--<image src="http://oofuaem2b.bkt.clouddn.com/2018/0119/15163419242936587847.png?imageView2/1/w/700/h/360/interlace/1/q/100"></image>-->
-            <!--</view>-->
-            <!--<view class="img">-->
-            <!--<image src="http://oofuaem2b.bkt.clouddn.com/2018/0119/15163419242936587847.png?imageView2/1/w/700/h/360/interlace/1/q/100"></image>-->
-            <!--</view>-->
-            <!--<view class="img">-->
-            <!--<image src="http://oofuaem2b.bkt.clouddn.com/2018/0119/15163419242936587847.png?imageView2/1/w/700/h/360/interlace/1/q/100"></image>-->
-            <!--</view>-->
-            <!--</view>-->
-            <!--<view class="info">-->
-            <!--<view class="data-box">-->
-            <!--<view class="time-box">2017-10-16-->
-            <!--<text class="dot">·</text>-->
-            <!--用户001发表-->
-            <!--</view>-->
-            <!--<view class="icon-box">-->
-            <!--<text class="iconfont icon-zan"></text>-->
-            <!--<text class="iconfont icon-shoucang"></text>-->
-            <!--</view>-->
-            <!--</view>-->
-            <!--</view>-->
-            <!--</view>-->
         </view>
     </view>
 </block>
