--- a/pages/article/article.wxml
+++ b/pages/article/article.wxml
@@ -10,6 +10,7 @@
                 <text class="time">{{articleInfo.updated}}</text>
             </view>
         </view>
+        <image src="{{articleInfo.image}}" mode="widthFix"></image>
         <template is="detailContent" data="{{ ...$detailContent.news }}"/>
 
 
