--- a/components/filtercomponents/filterBar/filterBar.wxml
+++ b/components/filtercomponents/filterBar/filterBar.wxml
@@ -3,7 +3,7 @@
         <view class="filter-nav" wx:for="{{barMenus}}" wx:key="index">
             <view class="filter-nav-inner" bindtap="handleShowDialog" data-barmenu="{{item}}" data-index="{{index}}">
                 <text class="txt">{{item.name}}</text>
-                <text class="iconfont icon-sjt"></text>
+                <text class="iconfont icon-jiantou1"></text>
             </view>
         </view>
     </view>
