--- a/style/args.scss
+++ b/style/args.scss
@@ -3,6 +3,7 @@
 $color_scheme: #56cbcb;
 $color_primary:#56cbcb;
 $color_primary_red:#ee674c;
+$color_primary_black:#181c1f;
 
 
 $color_cool:#f5f6fb;
