--- a/style/main.scss
+++ b/style/main.scss
@@ -6,6 +6,7 @@
   .index_search_bar {
     position: relative;
     padding: 20rpx 24rpx;
+    background-color: $color_primary_black;
     .search-box {
       width: 100%;
       height: 58rpx;
