--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -26,7 +26,7 @@
                     </view>
                     客户管理
                 </view>
-                <view class="cell-right cell-arrow"></view>
+                <view class="cell-right"></view>
             </view>
             <view class="cell-item">
                 <view class="cell-left ">
@@ -35,7 +35,7 @@
                     </view>
                     我的收藏
                 </view>
-                <view class="cell-right cell-arrow"></view>
+                <view class="cell-right "></view>
             </view>
             <view class="cell-item">
                 <view class="cell-left ">
@@ -44,7 +44,7 @@
                     </view>
                     更多功能
                 </view>
-                <view class="cell-right cell-arrow"></view>
+                <view class="cell-right iconfont icon-sjt"></view>
             </view>
         </view>
         <view class="extend-box">
